--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>Document</title>
 </head>
 <body>
@@ -100,12 +101,16 @@
         
     </main>
     <footer class="main-footer">
-        <h4>Student Name</h4>
-        <nav class="footer-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </nav>
+        <div>
+            <nav class="footer-nav">
+                <li><a href="#" class="mobile-footer">Student Name</a></li>
+                <li><a href="#" class="mobile-footer-too">BACK TO TOP</a></li>
+                <li><a href="#" class="hidden">Home</a></li>
+                <li><a href="#" class="hidden">Portfolio</a></li>
+                <li><a href="#" class="hidden">Contact</a></li>
+            </nav>
+        </div>
+        
     </footer>
 </body>
 </html>
